--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,24 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lumi Chatbot</title>
+    <title>Chatbot UI</title>
     <link rel="stylesheet" href="/static/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <div class="chat-container">
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-header">
-<<<<<<< HEAD
-                <img src="/static/assets/bot-icon.png" alt="NeuroSphere Lab Logo" class="logo">
-=======
-<<<<<<< HEAD
-                <img src="/static/assets/bot-icon.png" alt="NeuroSphere Lab Logo" class="logo">
-=======
                 <img src="/static/bot-icon.png" alt="NeuroSphere Lab Logo" class="logo">
->>>>>>> 8bbcfc6 (Added some features to UI and modified app.py)
->>>>>>> c30e052 (Fixed bugs and added new features)
                 <h2>Chats</h2>
                 <button class="new-chat-btn" onclick="startNewChat()">New Chat with Bot</button>
             </div>
