--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumi ChatBot</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <div class="chat-container">
@@ -20,7 +20,7 @@
         <!-- Sidebar -->
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <img src="bot-icon.png" alt="NeuroSphere Lab Logo" class="logo">
+                <img src="/static/bot-icon.png" alt="NeuroSphere Lab Logo" class="logo">
                 <h2>Chats</h2>
                 <button class="new-chat-btn" onclick="startNewChat()">New Chat with Bot</button>
             </div>
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
